force-app/main/default/objects/Job_Application__c/fields/Based_on_the_selection_criteria__c.field-meta.xml
<CustomField>
    <fullName>Based_on_the_selection_criteria__c</fullName>
    <inlineHelpText>Based on the selection criteria.</inlineHelpText>
    <label>Manager Scoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>