force-app/main/default/objects/Job_Application__c/fields/Custom_Answer__c.field-meta.xml
<CustomField>
    <fullName>Custom_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applications that deserve a special answer.</inlineHelpText>
    <label>Custom Answer</label>
    <type>Checkbox</type>
</CustomField>