force-app/main/default/objects/Job_Application__c/fields/CV__c.field-meta.xml
<CustomField>
    <fullName>CV__c</fullName>
    <label>CV</label>
    <type>Url</type>
</CustomField>