force-app/main/default/objects/Job_Application__c/fields/Doubts__c.field-meta.xml
<CustomField>
    <fullName>Doubts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>With doubts if this candidate qualifies for the next phase.</inlineHelpText>
    <label>Doubts</label>
    <type>Checkbox</type>
</CustomField>