force-app/main/default/objects/Job_Application__c/fields/English_Level__c.field-meta.xml
<CustomField>
    <fullName>English_Level__c</fullName>
    <formula>Text(Contact__r.English_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>English Level</label>
    <type>Text</type>
</CustomField>