force-app/main/default/objects/Job_Application__c/fields/Exclusion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Reason__c</fullName>
    <label>Exclusion Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requirements</fullName>
            </value>
            <value>
                <fullName>Candidate Initiative</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>