force-app/main/default/objects/Job_Application__c/fields/Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Submission</label>
    <referenceTo>Form_Submission__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>