force-app/main/default/objects/Job_Application__c/fields/Has_Degree_or_Training__c.field-meta.xml
<CustomField>
    <fullName>Has_Degree_or_Training__c</fullName>
    <label>Has Degree or Training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>