force-app/main/default/objects/Job_Application__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <formula>Job_Offer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Name</label>
    <type>Text</type>
</CustomField>