force-app/main/default/objects/Job_Application__c/fields/Job_Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Offer_Name__c</fullName>
    <formula>Job_Offer__r.Job_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Offer Name</label>
    <type>Text</type>
</CustomField>