force-app/main/default/objects/Job_Application__c/fields/Job_Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Publish_Date__c</fullName>
    <formula>Job_Offer__r.Published_Date__c</formula>
    <label>Job Publish Date</label>
    <type>Date</type>
</CustomField>