force-app/main/default/objects/Job_Application__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <formula>TEXT(Job_Offer__r.Status__c)</formula>
    <label>Job Status</label>
    <type>Text</type>
</CustomField>