force-app/main/default/objects/Job_Application__c/fields/Level_of_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Knowledge__c</fullName>
    <label>Level of Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common sense</fullName>
            </value>
            <value>
                <fullName>Relevant training or work experience</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>