force-app/main/default/objects/Job_Application__c/fields/Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Linkedin__c</fullName>
    <formula>Contact__r.LinkedIn_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn</label>
    <type>Text</type>
</CustomField>