force-app/main/default/objects/Job_Application__c/fields/Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes__c</fullName>
    <label>Manager Notes</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>