force-app/main/default/objects/Job_Application__c/fields/Portuguese_Level__c.field-meta.xml
<CustomField>
    <fullName>Portuguese_Level__c</fullName>
    <formula>Text(Contact__r.Portuguese_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portuguese Level</label>
    <type>Text</type>
</CustomField>