force-app/main/default/objects/Job_Application__c/fields/Recruiter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Notes__c</fullName>
    <label>Recruiter Notes</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>