force-app/main/default/objects/Job_Application__c/fields/Recruiter_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Scoring__c</fullName>
    <inlineHelpText>Based on the selection criteria.</inlineHelpText>
    <label>Recruiter Scoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>