force-app/main/default/objects/Job_Application__c/fields/Seguranca_Social__c.field-meta.xml
<CustomField>
    <fullName>Seguranca_Social__c</fullName>
    <formula>TEXT(Contact__r.Seguranca_Social__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segurança Social</label>
    <type>Text</type>
</CustomField>