force-app/main/default/objects/Job_Application__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>Agency - MP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>