force-app/main/default/objects/Job_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Job_Offer__c</columns>
    <columns>NAME</columns>
    <columns>Application_Stage__c</columns>
    <columns>Contact__c</columns>
    <columns>Recruiter_Scoring__c</columns>
    <columns>Based_on_the_selection_criteria__c</columns>
    <columns>CV__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>