force-app/main/default/objects/Job_Application__c/listViews/JO5_Account_Executive.listView-meta.xml
<ListView>
    <fullName>JO5_Account_Executive</fullName>
    <columns>Application_Stage__c</columns>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Seguranca_Social__c</columns>
    <columns>AvailableToTravel__c</columns>
    <columns>YearsOfExperience__c</columns>
    <columns>Portuguese_Level__c</columns>
    <columns>English_Level__c</columns>
    <columns>CV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Name__c</field>
        <operation>equals</operation>
        <value>JO-5</value>
    </filters>
    <filters>
        <field>Application_Stage__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>JO-5 Phase 0 - Submitted</label>
</ListView>