force-app/main/default/objects/Job_Application__c/listViews/JO_5_Phase_1_Form.listView-meta.xml
<ListView>
    <fullName>JO_5_Phase_1_Form</fullName>
    <columns>Application_Stage__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Has_Degree_or_Training__c</columns>
    <columns>YearsOfExperience__c</columns>
    <columns>Level_of_Knowledge__c</columns>
    <columns>Portuguese_Level__c</columns>
    <columns>English_Level__c</columns>
    <columns>City__c</columns>
    <columns>Seguranca_Social__c</columns>
    <columns>Linkedin__c</columns>
    <columns>CV__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Name__c</field>
        <operation>equals</operation>
        <value>JO-6</value>
    </filters>
    <filters>
        <field>Application_Stage__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>JO-6 Phase 0 - Application to Review</label>
</ListView>