force-app/main/default/objects/Job_Application__c/listViews/SalesforCE_PM_Applications_to_Review.listView-meta.xml
<ListView>
    <fullName>SalesforCE_PM_Applications_to_Review</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Job_Offer__c</columns>
    <columns>NAME</columns>
    <columns>Application_Stage__c</columns>
    <columns>Contact__c</columns>
    <columns>CV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Stage__c</field>
        <operation>equals</operation>
        <value>Initial Interview</value>
    </filters>
    <filters>
        <field>Job_Offer__c</field>
        <operation>equals</operation>
        <value>JO-1</value>
    </filters>
    <label>Salesforce PM - Applications to Review</label>
</ListView>